--- a/extensions/pyRevitCore.extension/pyRevit.tab/pyRevit.panel/Settings.smartbutton/SettingsWindow.ResourceDictionary.en_us.xaml
+++ b/extensions/pyRevitCore.extension/pyRevit.tab/pyRevit.panel/Settings.smartbutton/SettingsWindow.ResourceDictionary.en_us.xaml
@@ -59,7 +59,7 @@
 
     <system:String x:Key="CoreSettings.Loader">Loader</system:String>
     <system:String x:Key="CoreSettings.Loader.Description">Configure pyRevit's assembly loading mechanism. The new loader is a C# implementation that uses Roslyn build strategy</system:String>
-    <system:String x:Key="CoreSettings.Loader.NewLoader">Enables new pyRevit loader (beta)</system:String>
+    <system:String x:Key="CoreSettings.Loader.NewLoader">Enables new pyRevit loader (beta) (Restarting Revit is required)</system:String>
 
     <system:String x:Key="CoreSettings.CloseOtherConsoles">Close other open consoles</system:String>
     <system:String x:Key="CoreSettings.CloseOtherConsoles.Description">
