--- a/extensions/pyRevitCore.extension/pyRevit.tab/pyRevit.panel/Settings.smartbutton/SettingsWindow.ResourceDictionary.ru.xaml
+++ b/extensions/pyRevitCore.extension/pyRevit.tab/pyRevit.panel/Settings.smartbutton/SettingsWindow.ResourceDictionary.ru.xaml
@@ -60,7 +60,7 @@
  
     <system:String x:Key="CoreSettings.Loader">Загрузчик</system:String>
     <system:String x:Key="CoreSettings.Loader.Description">Настройка механизма загрузки сборок pyRevit. Новый загрузчик — это реализация на C#, которая использует стратегию сборки Roslyn</system:String>
-    <system:String x:Key="CoreSettings.Loader.NewLoader">Использовать новую версию загрузчика pyRevit (бета)</system:String>
+    <system:String x:Key="CoreSettings.Loader.NewLoader">Использовать новую версию загрузчика pyRevit (бета) (Требуется перезапуск Revit)</system:String>
 
     <system:String x:Key="CoreSettings.CloseOtherConsoles">Закрывать другие открытые консоли</system:String>
     <system:String x:Key="CoreSettings.CloseOtherConsoles.Description">
