--- a/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.xaml
+++ b/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.xaml
@@ -22,7 +22,7 @@
         </Style>
     </Window.Resources>
     
-    <Grid Margin="12,2,12,12">
+    <Grid Margin="12,2,2,12">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="15"/>
@@ -65,7 +65,7 @@
 
         <!-- Category Dropdown -->
         <ComboBox x:Name="_categories" Grid.Column="0" Grid.Row="1"
-                  Height="21" Margin="0,2,0,0"
+                  Height="21" Margin="0,2,0,0" FontSize="11"
                   DisplayMemberPath="Key"
                   ToolTip="{DynamicResource ColorSplasher.Tooltips.CategorySelection}"/>
 
@@ -97,13 +97,13 @@
         <!-- Gradient Colors Button -->
         <Button x:Name="_button_gradient_colors" Grid.Column="2" Grid.Row="3"
                 Content="{DynamicResource ColorSplasher.Buttons.GradientColors}"
-                Height="28" Margin="0,0,0,0"
+                Height="24" Margin="0,0,0,0"
                 FontSize="9" Click="button_click_gradient_colors"
                 ToolTip="{DynamicResource ColorSplasher.Tooltips.GradientColors}"/>
 
         <!-- Parameters Dropdown -->
         <ComboBox x:Name="_list_box1" Grid.Column="0" Grid.Row="4"
-                  Height="21" Margin="0,2,0,0"
+                  Height="21" Margin="0,2,0,0" FontSize="11"
                   DisplayMemberPath="Key"
                   SelectionChanged="check_item"
                   ToolTip="{DynamicResource ColorSplasher.Tooltips.ParameterSelection}"/>
@@ -111,7 +111,7 @@
         <!-- Random Colors Button -->
         <Button x:Name="_button_random_colors" Grid.Column="2" Grid.Row="4"
                 Content="{DynamicResource ColorSplasher.Buttons.RandomColors}"
-                Height="28" Margin="0,4,0,0"
+                Height="24" Margin="0,4,0,0"
                 FontSize="9" Click="button_click_random_colors"
                 ToolTip="{DynamicResource ColorSplasher.Tooltips.RandomColors}"/>
 
@@ -127,12 +127,23 @@
                    FontWeight="Bold" FontSize="11" Margin="0,12,0,0" />
 
         <!-- Values ListBox - Extended to bottom, aligned with Reset/Set Colors buttons -->
-        <ListBox x:Name="list_box2" Grid.Column="0" Grid.Row="6" Grid.RowSpan="10"
-                 DisplayMemberPath="Key"
-                 Margin="0,2,0,0"
-                 FontSize="9"
-                 VerticalAlignment="Stretch"
-                 ToolTip="{DynamicResource ColorSplasher.Tooltips.ValuesColorAssignment}"/>
+        <Grid Grid.Column="0" Grid.Row="6" Grid.RowSpan="10" Margin="0,2,0,0">
+            <ListBox x:Name="list_box2"
+                     DisplayMemberPath="Key"
+                     FontSize="9"
+                     VerticalAlignment="Stretch"
+                     ToolTip="{DynamicResource ColorSplasher.Tooltips.ValuesColorAssignment}"/>
+            <TextBlock x:Name="_txt_placeholder_values"
+                       Text="{DynamicResource ColorSplasher.Placeholders.SelectCategoryAndParameter}"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       FontSize="11"
+                       Foreground="Gray"
+                       TextAlignment="Center"
+                       TextWrapping="Wrap"
+                       MaxWidth="240"
+                       IsHitTestVisible="False"/>
+        </Grid>
 
         <!-- Checkbox: Line Color -->
         <CheckBox x:Name="_chk_line_color" Grid.Column="2" Grid.Row="6"
@@ -158,14 +169,14 @@
         <!-- Create Legend Button -->
         <Button x:Name="_button_create_legend" Grid.Column="2" Grid.Row="9"
                 Content="{DynamicResource ColorSplasher.Buttons.CreateLegend}"
-                Height="28" Margin="0,10,0,0"
+                Height="24" Margin="0,10,0,0"
                 FontSize="9" Click="button_click_create_legend"
                 ToolTip="{DynamicResource ColorSplasher.Tooltips.CreateLegend}"/>
 
         <!-- Create View Filters Button -->
         <Button x:Name="_button_create_view_filters" Grid.Column="2" Grid.Row="10"
                 Content="{DynamicResource ColorSplasher.Buttons.CreateViewFilters}"
-                Height="28" Margin="0,4,0,0"
+                Height="24" Margin="0,4,0,0"
                 FontSize="9" Click="button_click_create_view_filters"
                 ToolTip="{DynamicResource ColorSplasher.Tooltips.CreateViewFilters}"/>
 
