--- a/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.ResourceDictionary.fr_fr.xaml
+++ b/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.ResourceDictionary.fr_fr.xaml
@@ -66,7 +66,7 @@
     <system:String x:Key="ColorSplasher.Messages.UnableToAccessDocument.Content">Veuillez vous assurer qu'un projet Revit est ouvert et réessayez.</system:String>
 
     <!-- Placeholders -->
-    <system:String x:Key="ColorSplasher.Placeholders.SearchParameters">Rechercher</system:String>
+    <system:String x:Key="ColorSplasher.Placeholders.SearchParameters">Rechercher des Paramètres...</system:String>
     <system:String x:Key="ColorSplasher.Placeholders.SelectCategoryAndParameter">Sélectionnez une catégorie et un paramètre pour voir les valeurs des paramètres</system:String>
     <system:String x:Key="ColorSplasher.Messages.ShiftClickToSelect">Maj+Cliquer pour sélectionner les éléments</system:String>
 
