--- a/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.ResourceDictionary.ru.xaml
+++ b/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.ResourceDictionary.ru.xaml
@@ -66,7 +66,7 @@
     <system:String x:Key="ColorSplasher.Messages.UnableToAccessDocument.Content">Пожалуйста, убедитесь, что проект Revit открыт, и попробуйте снова.</system:String>
 
     <!-- Placeholders -->
-    <system:String x:Key="ColorSplasher.Placeholders.SearchParameters">Поиск</system:String>
+    <system:String x:Key="ColorSplasher.Placeholders.SearchParameters">Поиск Параметров...</system:String>
     <system:String x:Key="ColorSplasher.Placeholders.SelectCategoryAndParameter">Выберите категорию и параметр, чтобы увидеть значения параметров</system:String>
     <system:String x:Key="ColorSplasher.Messages.ShiftClickToSelect">Shift+Клик для выбора элементов</system:String>
 
