--- a/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.xaml
+++ b/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.xaml
@@ -56,8 +56,6 @@
                    FontWeight="Bold" FontSize="11" Margin="0,15,0,0"
                    ToolTip="{DynamicResource ColorSplasher.Tooltips.CategorySelection}"/>
 
-        <!-- RIGHT COLUMN - Actions & Settings -->
-        
         <!-- Manage Schemes Label -->
         <TextBlock x:Name="_lbl_manage_schemes" Grid.Column="2" Grid.Row="0"
                    Text="{DynamicResource ColorSplasher.Labels.ManageSchemes}"
@@ -193,7 +191,7 @@
                    FontSize="11" Foreground="Red" TextDecorations="Underline"
                    Margin="0,5,0,0" Visibility="Collapsed"/>
 
-        <!-- Select All and Select None Buttons - Left column, bottom row -->
+        <!-- Select All and Select None Buttons -->
         <Grid Grid.Column="0" Grid.Row="15" Margin="0,10,0,0" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -210,7 +208,7 @@
                     ToolTip="{DynamicResource ColorSplasher.Tooltips.SelectNone}"/>
         </Grid>
 
-        <!-- Reset and Set Colors Buttons - At the very bottom, aligned to right column -->
+        <!-- Reset and Set Colors Buttons -->
         <Grid Grid.Column="2" Grid.Row="15" Margin="0,10,0,0" VerticalAlignment="Bottom">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.5*"/>
