--- a/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.xaml
+++ b/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.xaml
@@ -131,8 +131,8 @@
                    Text="{DynamicResource ColorSplasher.Labels.ApplySettings}"
                    FontWeight="Bold" FontSize="12" Margin="0,12,0,0" />
 
-        <!-- Values ListBox - Extended to bottom, aligned with Set Colors button top -->
-        <Grid Grid.Column="0" Grid.Row="6" Grid.RowSpan="9" Margin="0,2,0,0">
+        <!-- Values ListBox - Extended to bottom, aligned with Set Colors button bottom -->
+        <Grid Grid.Column="0" Grid.Row="6" Grid.RowSpan="10" Margin="0,2,0,0">
             <ListBox x:Name="list_box2"
                      DisplayMemberPath="Key"
                      FontSize="11"
@@ -190,23 +190,6 @@
                    Text="{DynamicResource ColorSplasher.Messages.SpacesColorScheme}"
                    FontSize="12" Foreground="Red" TextDecorations="Underline"
                    Margin="0,5,0,0" Visibility="Collapsed"/>
-
-        <!-- Select All and Select None Buttons -->
-        <Grid Grid.Column="0" Grid.Row="15" Margin="0,10,0,0" VerticalAlignment="Top">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="15"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Button x:Name="_button_select_all" Grid.Column="0"
-                    Content="{DynamicResource ColorSplasher.Buttons.SelectAll}"
-                    Height="32" FontSize="12" Click="button_click_select_all"
-                    ToolTip="{DynamicResource ColorSplasher.Tooltips.SelectAll}"/>
-            <Button x:Name="_button_select_none" Grid.Column="2"
-                    Content="{DynamicResource ColorSplasher.Buttons.SelectNone}"
-                    Height="32" FontSize="12" Click="button_click_select_none"
-                    ToolTip="{DynamicResource ColorSplasher.Tooltips.SelectNone}"/>
-        </Grid>
 
         <!-- Reset and Set Colors Buttons -->
         <Grid Grid.Column="2" Grid.Row="15" Margin="0,10,0,0" VerticalAlignment="Bottom">
