Update ColorSplasherWindow resource dictionaries for improved localization
- Changed window title strings in multiple languages to include "Value" for clarity:
  - Chinese: "按参数值着色元素"
  - German: "Elemente nach Parameterwert einfärben"
  - English: "Color Elements By Parameter Value"
  - Spanish: "Colorear Elementos por Valor de Parámetro"
  - French: "Coloriser les Éléments par Valeur de Paramètre"
  - Russian: "Окраска Элементов по Значению Параметра"

--- a/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.ResourceDictionary.chinese_s.xaml
+++ b/extensions/pyRevitTools.extension/pyRevit.tab/Analysis.panel/ColorSplasher.pushbutton/ColorSplasherWindow.ResourceDictionary.chinese_s.xaml
@@ -4,7 +4,7 @@
     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <!-- Window Title -->
-    <system:String x:Key="ColorSplasher.Title">按参数着色元素</system:String>
+    <system:String x:Key="ColorSplasher.Title">按参数值着色元素</system:String>
 
     <!-- Section Labels -->
     <system:String x:Key="ColorSplasher.Labels.CategorySelection">类别选择</system:String>
