--- a/extensions/pyRevitTools.extension/pyRevit.tab/Modify.panel/3D.pulldown/Section Box Navigator.pushbutton/SectionBoxNavigator.xaml
+++ b/extensions/pyRevitTools.extension/pyRevit.tab/Modify.panel/3D.pulldown/Section Box Navigator.pushbutton/SectionBoxNavigator.xaml
@@ -1,6 +1,6 @@
 <Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="{DynamicResource Title}" Height="670" Width="560" 
+        Title="{DynamicResource Title}" Height="700" Width="560" 
         ShowInTaskbar="False" Topmost="True"
         ScrollViewer.VerticalScrollBarVisibility="Disabled">
     <Window.Resources>
@@ -308,13 +308,31 @@
                 </Grid.RowDefinitions>
                 <StackPanel Grid.Row="0">
                     <TextBlock x:Name="project_unit_text" Text="" Visibility="Collapsed" Foreground="Red" FontWeight="Bold" Margin="0,5,0,2"/>
-                    <TextBlock x:Name="txtTopLevelAbove" Text="{DynamicResource Top} Loading..." Margin="0,2" FontSize="10"/>
-                    <TextBlock x:Name="txtTopPosition" Text="{DynamicResource Position} ..." Margin="0,2" Foreground="DarkBlue"/>
-                    <TextBlock x:Name="txtTopLevelBelow" Text="{DynamicResource Top} Loading..." Margin="0,2" FontSize="10"/>
+                    <TextBlock x:Name="txtTopLevelAbove" Margin="0,2" FontSize="10">
+                        <Run Text="{DynamicResource Top}"/>
+                        <Run Text=" Loading..."/>
+                    </TextBlock>
+                    <TextBlock x:Name="txtTopPosition" Margin="0,2" Foreground="DarkBlue">
+                        <Run Text="{DynamicResource Position}"/>
+                        <Run Text=" ..."/>
+                    </TextBlock>
+                    <TextBlock x:Name="txtTopLevelBelow" Margin="0,2" FontSize="10">
+                        <Run Text="{DynamicResource Top}"/>
+                        <Run Text=" Loading..."/>
+                    </TextBlock>
                     <Separator Margin="0,2" />
-                    <TextBlock x:Name="txtBottomLevelAbove" Text="{DynamicResource Bottom} Loading..." Margin="0,2" FontSize="10"/>
-                    <TextBlock x:Name="txtBottomPosition" Text="{DynamicResource Position} ..." Margin="0,2" Foreground="DarkBlue"/>
-                    <TextBlock x:Name="txtBottomLevelBelow" Text="{DynamicResource Bottom} Loading..." Margin="0,2" FontSize="10"/>
+                    <TextBlock x:Name="txtBottomLevelAbove" Margin="0,2" FontSize="10">
+                        <Run Text="{DynamicResource Bottom}"/>
+                        <Run Text=" Loading..."/>
+                    </TextBlock>
+                    <TextBlock x:Name="txtBottomPosition" Margin="0,2" Foreground="DarkBlue">
+                        <Run Text="{DynamicResource Position}"/>
+                        <Run Text=" ..."/>
+                    </TextBlock>
+                    <TextBlock x:Name="txtBottomLevelBelow" Margin="0,2" FontSize="10">
+                        <Run Text="{DynamicResource Bottom}"/>
+                        <Run Text=" Loading..."/>
+                    </TextBlock>
                     <Separator Margin="0,2" />
                     <TextBlock x:Name="txtVerticalStatus" Text="" Margin="0,5,0,0" TextWrapping="Wrap" Foreground="Black"/>
                 </StackPanel>
